# plugify-module-golang

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  README_ru.md  go-lang-module.json  go-lang-module.pmodule  go-lang-module.pmodule.in  plugify-module-golang.json  plugify-module-golang.pmodule.in
.github/workflows/: cmake-multiple-platform.yml
conda/: bld.bat  build.sh  meta.yaml.example
generator/: generator.py
include/plugify/: plugify.c  plugify.go
managed/: README.md  README_ru.md  build.sh  go.mod  main.c  main.go  main.h
src/: assembly.cpp  assembly.h  module.cpp  module.h  module.hpp  pch.h  pch.hpp
test/: .gitignore
test/cross_call_worker/: README.md  autoexports.go  autoexports.h  callbacks.go  cross.h  cross_call_master.go  cross_call_worker.h  cross_call_worker.pplugin  cross_call_worker_x86.h  exports.go  generator.go  go.mod  go.sum  main.go  main.pplugin
test/cross_call_worker/cross_call_master/: aliases.go  core.c  core.go  core.h  counter.c  counter.go  counter.h  cross_call_master.go  cross_call_master.h  delegates.go  enums.go  resource.c  resource.go  resource.h  shared.go
test/example_golang_plugin/: example_golang_plugin.pplugin  main.go
test/example_golang_plugin/plugify/: plugify.go
test/example_plugin/: cross_call_worker.go  example_plugin.pplugin  go.mod  go.sum  main.go
test/example_plugin/cross_call_worker/: aliases.go  core.c  core.go  core.h  delegates.go  enums.go  shared.go  shared.h
tests/example_cpp_plugin/: CMakeLists.txt  example_cpp_plugin.pplugin  plugin.cpp
tests/example_cpp_plugin/plugify/: cpp_plugin.h
tests/example_cpp_plugin/pps/: example_golang_plugin.h
tests/example_cpp_plugin/test/: test.h
tests/example_golang_plugin/: README.md  build.cmd  example_golang_plugin.h  example_golang_plugin.pplugin  go.mod  main.go
tests/example_golang_plugin/cpptest/: cpptest.go  cpptest.h
tests/example_golang_plugin/example_cpp_plugin/: example_cpp_plugin.go  example_cpp_plugin.h
tests/example_golang_plugin/plugify/: plugify.c  plugify.cc  plugify.go  plugify.h
tests/go_example_plugin/: go_example_plugin.pplugin  main.go
tests/go_example_plugin/plugify/: plugify.c
